name:                engine-git
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Shodai Yokoyama
maintainer:          quantumcars@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library
  default-language:    Haskell2010

  build-depends:
    base >=4.7 && <4.8
