name:                engine-git
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Shodai Yokoyama
maintainer:          quantumcars@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library
  default-language:    Haskell2010
  hs-source-dirs:      src

  build-depends:
    base >=4.7 && <4.8


test-suite hspec
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  main-is:           Spec.hs
  hs-source-dirs:    test, src
  ghc-options:       -Wall
  build-depends:
        base
      , QuickCheck
      , hspec
