name:                engine-git
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Shodai Yokoyama
maintainer:          quantumcars@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.20

extra-source-files:
  libgit2/deps/http-parser/*.h
  libgit2/include/git2.h
  libgit2/include/git2/*.h
  libgit2/src/*.h
  libgit2/src/hash/*.h
  libgit2/src/transports/*.h
  libgit2/src/unix/*.h
  libgit2/src/win32/*.h
  libgit2/src/xdiff/*.h

library
  default-language:    Haskell2010
  hs-source-dirs:      src

  exposed-modules: Main

  include-dirs:
    libgit2/include
    libgit2/src
    libgit2/deps/http-parser

  c-sources:
    libgit2/src/attr.c
    libgit2/src/attr_file.c
    libgit2/src/attrcache.c
    libgit2/src/blame.c
    libgit2/src/blame_git.c
    libgit2/src/blob.c
    libgit2/src/branch.c
    libgit2/src/buf_text.c
    libgit2/src/buffer.c
    libgit2/src/cache.c
    libgit2/src/checkout.c
    libgit2/src/cherrypick.c
    libgit2/src/clone.c
    libgit2/src/commit.c
    libgit2/src/commit_list.c
    libgit2/src/config.c
    libgit2/src/config_cache.c
    libgit2/src/config_file.c
    libgit2/src/crlf.c
    libgit2/src/date.c
    libgit2/src/delta-apply.c
    libgit2/src/delta.c
    libgit2/src/diff.c
    libgit2/src/diff_driver.c
    libgit2/src/diff_file.c
    libgit2/src/diff_patch.c
    libgit2/src/diff_print.c
    libgit2/src/diff_stats.c
    libgit2/src/diff_tform.c
    libgit2/src/diff_xdiff.c
    libgit2/src/errors.c
    libgit2/src/fetch.c
    libgit2/src/fetchhead.c
    libgit2/src/filebuf.c
    libgit2/src/fileops.c
    libgit2/src/filter.c
    libgit2/src/fnmatch.c
    libgit2/src/global.c
    libgit2/src/graph.c
    libgit2/src/hash.c
    libgit2/src/hash/hash_generic.c
    libgit2/src/hashsig.c
    libgit2/src/ident.c
    libgit2/src/ignore.c
    libgit2/src/index.c
    libgit2/src/indexer.c
    libgit2/src/iterator.c
    libgit2/src/merge.c
    libgit2/src/merge_file.c
    libgit2/src/message.c
    libgit2/src/mwindow.c
    libgit2/src/netops.c
    libgit2/src/notes.c
    libgit2/src/object.c
    libgit2/src/object_api.c
    libgit2/src/odb.c
    libgit2/src/odb_loose.c
    libgit2/src/odb_mempack.c
    libgit2/src/odb_pack.c
    libgit2/src/oid.c
    libgit2/src/pack-objects.c
    libgit2/src/pack.c
    libgit2/src/path.c
    libgit2/src/pathspec.c
    libgit2/src/pool.c
    libgit2/src/posix.c
    libgit2/src/pqueue.c
    libgit2/src/push.c
    libgit2/src/refdb.c
    libgit2/src/refdb_fs.c
    libgit2/src/reflog.c
    libgit2/src/refs.c
    libgit2/src/refspec.c
    libgit2/src/remote.c
    libgit2/src/repository.c
    libgit2/src/reset.c
    libgit2/src/revert.c
    libgit2/src/revparse.c
    libgit2/src/revwalk.c
    libgit2/src/settings.c
    libgit2/src/sha1_lookup.c
    libgit2/src/signature.c
    libgit2/src/sortedcache.c
    libgit2/src/stash.c
    libgit2/src/status.c
    libgit2/src/strmap.c
    libgit2/src/submodule.c
    libgit2/src/sysdir.c
    libgit2/src/tag.c
    libgit2/src/thread-utils.c
    libgit2/src/trace.c
    libgit2/src/transport.c
    libgit2/src/transports/cred.c
    libgit2/src/transports/cred_helpers.c
    libgit2/src/transports/git.c
    libgit2/src/transports/http.c
    libgit2/src/transports/local.c
    libgit2/src/transports/smart.c
    libgit2/src/transports/smart_pkt.c
    libgit2/src/transports/smart_protocol.c
    libgit2/src/transports/ssh.c
    libgit2/src/transports/winhttp.c
    libgit2/src/tree-cache.c
    libgit2/src/tree.c
    libgit2/src/tsort.c
    libgit2/src/util.c
    libgit2/src/vector.c
    libgit2/src/xdiff/xdiffi.c
    libgit2/src/xdiff/xemit.c
    libgit2/src/xdiff/xhistogram.c
    libgit2/src/xdiff/xmerge.c
    libgit2/src/xdiff/xpatience.c
    libgit2/src/xdiff/xprepare.c
    libgit2/src/xdiff/xutils.c
    libgit2/src/zstream.c

  cc-options: -DGIT_THREADS -D_FILE_OFFSET_BITS=64 -DGIT_SSL -Wno-format
  if os(windows)
    cpp-options: -DWINDOWS
    cc-options: -DWIN32 -D_WIN32_WINNT=0x0501 -D__USE_MINGW_ANSI_STDIO=1
    c-sources:
      libgit2/src/hash/hash_win32.c
      libgit2/src/transports/winhttp.c
      libgit2/src/win32/dir.c
      libgit2/src/win32/error.c
      libgit2/src/win32/findfile.c
      libgit2/src/win32/map.c
      libgit2/src/win32/posix_w32.c
      libgit2/src/win32/precompiled.c
      libgit2/src/win32/pthread.c
      libgit2/src/win32/utf-conv.c
    include-dirs:
      libgit2/src/win32
  else
    cc-options: -fPIC
    c-sources:
      libgit2/src/unix/map.c
      libgit2/src/unix/realpath.c
    include-dirs:
      libgit2/src/unix
    extra-libraries:
      ssl, crypto, pthread

  build-depends:
    base >=4.7 && <4.8


test-suite hspec
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  main-is:           Spec.hs
  hs-source-dirs:    test, src
  ghc-options:       -Wall
  build-depends:
        base
      , QuickCheck
      , hspec
